--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -588,6 +588,13 @@ defaults:
       # NOTE: Tests crash on nodejs 17: "Error: error:0308010C:digital envelope routines::unsupported"
       nodejs_version: '16'
       resource_class: medium
+  - job_native_test_chainlink: &job_native_test_chainlink
+      <<: *workflow_ubuntu2004_static
+      name: t_native_test_ext_chainlink
+      project: chainlink
+      binary_type: native
+      # Requires node.js ^12.0.0
+      nodejs_version: '12'
   - job_ems_test_ext_colony: &job_ems_test_ext_colony
       <<: *workflow_emscripten
       name: t_ems_test_ext_colony
@@ -1474,6 +1481,7 @@ workflows:
       - t_ems_ext: *job_native_test_ext_uniswap
       - t_ems_ext: *job_native_test_prb_math
       - t_ems_ext: *job_native_test_ext_elementfi
+      - t_ems_ext: *job_native_test_chainlink
 
       # Windows build and tests
       - b_win: *workflow_trigger_on_tags
